
The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

toc::[]

== Unreleased
These changes are merged into the `main` branch but have not yet been tagged as a new version/release.

==== Breaking

==== Added

==== Changed

==== Deleted

==== To be deprecated/Will break in a future version

== Releases
=== 2.8.0 - 2022-05-13
https://github.com/lyrasis/kiba-extend/compare/v2.7.2\...v2.8.0[Compare code changes]

==== Breaking
* `Count::MatchingRowsInLookup` previously returned Integers. Now it defaults to returning Strings, since many of the transforms assume all field values will be strings. If you were calling `Count::MatchingRowsInLookup` in a job and working with the integer result as an integer within that job, this will be a breaking change. In https://github.com/lyrasis/kiba-extend/pull/69[PR#69]

==== Added
* `Lookup::RowSorter` class and the ability to pass it in as an argument to `Merge::MultiRowLookup` transform to explicitly control the order in which matching rows are merged. In https://github.com/lyrasis/kiba-extend/pull/82[PR#82]
* Ability to pass in a Lambda as a `conditions` argument on transforms. This provides a more straightforward and infinitely flexible alternative to the horrible, poorly documented Hash expression of conditions. In https://github.com/lyrasis/kiba-extend/pull/82[PR#82]
* Add `Rename::Fields` transform. In https://github.com/lyrasis/kiba-extend/pull/75[PR#75]
* Add `Name::SplitInverted` and `Name::ConvertInvertedToDirectForm` transforms. In https://github.com/lyrasis/kiba-extend/pull/74[PR#74]
* Add `Allable` mixin module for transforms that accept `fields: :all`. In https://github.com/lyrasis/kiba-extend/pull/73[PR#73]
* Add `Cspace::AddressCountry` transform. In https://github.com/lyrasis/kiba-extend/pull/72[PR#72]. Made more configurable in https://github.com/lyrasis/kiba-extend/pull/75[PR#75]